--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "lang-flag-icon",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "https://github.com/FCOO/lang-flag-icon",
   "authors": [
     "Niels Holt nho@fcoo.dk"
@@ -20,7 +20,7 @@
     "bourbon": "latest",
     "modernizr-mixin": "latest",
     "mathsass": "latest",
-    "modernizr-scss": "fcoo/modernizr-scss#^1.3.0"
+    "modernizr-scss": "fcoo/modernizr-scss#latest"
   },
   "license": "MIT",
   "ignore": [
