--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "lang-flag-icon",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "homepage": "https://github.com/FCOO/lang-flag-icon",
   "authors": [
     "Niels Holt nho@fcoo.dk"
   ],
   "description": "",
   "main": [
-    "dist/lang-flag-icon.min.js"
+    "dist/lang-flag-icon.js"
   ],
   "repository": {
     "type": "git",
